# remote-audio

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  config.ini  main.c  proto.c  proto.h  sink.c  socket.c  socket.h  test.c
src/: CMakeLists.txt  audio.c  audio.h  client.c  client.h  common.c  common.h  crypto.c  crypto.cpp  crypto.h  http.c  http.h  inet.c  inet.h  message.c  message.h  proto.c  proto.h  ring_buffer.c  ring_buffer.h  server.c  sink.c  socket.c  socket.h  source.c  stream.c  stream.h  string.h  thread.c  thread.h  types.c  types.h  utils.c  utils.h
src/app/: CMakeLists.txt  sink.c  sink.h  source.c  source.h
src/cmd/: CMakeLists.txt  service.c  sink.c  source.c
src/cmd/win32/: service.c
src/lib/: CMakeLists.txt  audio.c  audio.h  config.c  config.h  crypto.c  crypto.h  logger.c  logger.h  pool.c  pool.h  proto.c  socket.c  socket.h  stream.c  stream.h  string.c  string.h  thread.c  thread.h  types.c  types.h  utils.c  utils.h
src/lib/private/: thread.c  thread.h
src/lib/unix/: socket.c  thread.c
src/lib/win32/: socket.c  thread.c  types.c
src/test/: CMakeLists.txt  logger.c  pool.c
test/: CMakeLists.txt  ratest_config.c  ratest_logger.c  ratest_types.c  ratest_utils.c  ring_buffer_test.c  test_runner.c
