add_library(lib STATIC audio.c
                       config.c
                       crypto.c
                       logger.c
                       proto.c
                       socket.c
                       stream.c
                       string.c
                       thread.c
                       types.c
                       utils.c)
